# ShareMyBleedings

./: .dockerignore  .env.example  .gitignore  AI_GUIDE.md  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  install.sh  pyproject.toml
examples/: corporate_audit.json  corporate_audit_Q3.json  demo_dashboard.html  multi_site_audit.json  multi_site_audit_Q3.json
smb_bleedings/: __init__.py  config.py  main.py  models.py  pipeline.py
smb_bleedings/agents/: acl_analyzer.py  content_scanner.py  discovery.py  enumerator.py  reporter.py
smb_bleedings/utils/: cidr.py  risk.py  sid_resolver.py
smb_bleedings/utils/templates/: dashboard.html  report.html.j2
tests/: test_acl_analyzer.py  test_config.py  test_content_scanner.py  test_discovery.py  test_main_utils.py  test_pipeline.py  test_reporter.py  test_risk.py
